--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
       </div>
     </section>
     <footer><p> Copyright &copy Awesome Books. All rights reserved.</p></footer>
-    <script type="text/javascript" src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
